--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -128,7 +128,12 @@
   /* White border */
   font-weight: bold;
 }
-
+.signup-logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
 .signup-logo {
   width: 150px;
   /* Adjust size */
