--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -25,7 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: auto;
   background: #f8f9fa;
 }
 
@@ -133,13 +133,14 @@
 
 .box {
   background: white;
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
   margin: 10px;
-  flex: 1;
   max-width: 300px;
+  margin: 0 auto;
+  margin-top: 20px; /* Added margin top */
 }
 
 .box h3 {
@@ -162,4 +163,68 @@
   color: white;
   border-radius: 5px;
   text-decoration: none;
+}
+
+/* News and Events */
+
+.newsevents-homebox {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding: 20px;
+  box-sizing: border-box; /* Ensure padding is included in the element's total width and height */
+}
+
+.newsevents-container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  background: #f8f9fa;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+  box-sizing: border-box; /* Ensure padding is included in the element's total width and height */
+}
+
+.newsevents-latest-events,
+.newsevents-latest-news {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 40px;
+  padding: 20px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box; /* Ensure padding is included in the element's total width and height */
+}
+
+.newsevents-latest-events h2,
+.newsevents-latest-news h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  background: #f9486c;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.newsevents-latest-events p,
+.newsevents-latest-news p {
+  font-size: 1rem;
+  color: #333;
+  line-height: 1.6;
+}
+
+.newsevents-event-images {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px;
+  flex-wrap: wrap;
+}
+
+.newsevents-event-images img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
