--- a/src/styles/components/AdminSurvey.css
+++ b/src/styles/components/AdminSurvey.css
@@ -80,7 +80,12 @@
     margin-right: 20px;
     min-height: 100vh;
 }
-
+.adminsurvey-title {
+    font-size: 2rem;
+    color: #D81B60; /* Pink color theme */
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
 /* Admin Survey Content */
 .admin-survey-content {
     flex: 1;
@@ -250,10 +255,11 @@
 
 .create-survey-button {
     padding: 10px 20px;
-    background-color: #28a745;
+    background-color: #db227e;
     color: #fff;
     border: none;
     border-radius: 5px;
+    margin-top: 20px;
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease;
