--- a/src/styles/adminalumni.css
+++ b/src/styles/adminalumni.css
@@ -35,7 +35,7 @@
   font-size: 20px;
   font-weight: bold; /* Make the title bold */
   margin-bottom: 10px;
-  color: #d63384; /* Optional: Add a color to match the theme */
+  color: #d20921; /* Optional: Add a color to match the theme */
 }
 
 /* Scrollable table styling */
@@ -53,7 +53,7 @@ table {
 }
 
 thead {
-  background-color: #d63384; /* Pink header background */
+  background-color: #fa5967; /* Pink header background */
   color: #fff;
   position: sticky;
   top: 0; /* Keep the header row fixed */
