--- a/src/styles/components/AdminSurvey.css
+++ b/src/styles/components/AdminSurvey.css
@@ -40,7 +40,7 @@
 .create-survey-container input:focus,
 .create-survey-container textarea:focus {
     border-color: #D81B60; 
-    box-shadow: 0 0 5px rgba(216, 27, 96, 0.3);
+    box-shadow: 0 0 5px rgba(239, 4, 90, 0.3);
 }
 
 .form-actions {
@@ -51,7 +51,7 @@
 }
 
 .form-actions button {
-    background-color: #D81B60;
+    background-color: #f85880;
     color: #fff;
     border: none;
     padding: 0.7rem 2rem;
@@ -255,7 +255,7 @@
 
 .create-survey-button {
     padding: 10px 20px;
-    background-color: #db227e;
+    background-color: #f6687b;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -266,5 +266,5 @@
 }
 
 .create-survey-button:hover {
-    background-color: #218838;
+    background-color: #e00446;
 }
